# WindowsPC-MCP

./: .gitignore  .mcp.json  README.md  bugreport.md  pyproject.toml
docs/: tools.md
docs/superpowers/plans/: 2026-03-28-windowsmcp-custom-plan.md  2026-03-28-windowspc-mcp-plan.md  2026-03-29-independent-agent-input.md
docs/v0.2.0/: independent-input-spec.md
src/windowsmcp_custom/: __init__.py  __main__.py  server.py
src/windowspc_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_confinement.py  test_display_manager.py  test_driver.py  test_server.py  test_state_machine.py
tests/confinement/: test_bounds.py  test_decorators.py  test_engine.py  test_errors.py  test_guard.py  test_shortcuts.py
tests/desktop/: test_capture.py  test_controller.py  test_gate.py  test_hotkeys.py  test_manager.py  test_monitor.py  test_overlay.py  test_profiler.py  test_responses.py  test_scheduler.py  test_viewer.py
tests/display/: test_capture.py  test_driver.py  test_identity.py  test_manager.py  test_setup.py
tests/e2e/: conftest.py  test_input_tools.py  test_lifecycle.py  test_utility_tools.py
tests/input/: test_service.py
tests/ipc/: test_commands.py  test_frames.py  test_status.py
tests/smoke/: conftest.py  test_ctypes_structs.py  test_display_listener.py  test_driver_check.py  test_server_startup.py  test_vdd_release.py
tests/tools/: test_input_status.py
tests/tree/: test_config.py  test_service.py  test_views.py
tests/uia/: test_controls.py  test_core.py  test_patterns.py
ui/: main.py  toolbar.py  viewer.py
(+87 files in other folders)
